MVP done + some stretch

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,12 +4,14 @@
   background: @main-bg;
   border-bottom: 2px dashed @navigation-border;
   position: fixed;
+      z-index: 999;
 
   .nav-container {
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 
     @media @mobile {
       flex-wrap: wrap;
